--- a/FrontEnd/src/app/component/user/homepage/homepage.component.html
+++ b/FrontEnd/src/app/component/user/homepage/homepage.component.html
@@ -39,6 +39,7 @@
                       <span class="meal-fat">Fat: {{ meal.fat | number: '1.2-2' }}g</span>
                       <span class="meal-sugars"> | Sugars: {{ meal.sugars | number: '1.2-2' }}g</span>
                       <span class="meal-protein"> | Protein: {{ meal.protein | number: '1.2-2' }}g</span>
+                      <span class="meal-type">{{meal.type}}</span>
                     </div>
                   }
                 </article>
